09_2tier_web_app/security_groups/main.tf
# Security Groups Module - Main Configuration

# Web Server Security Group
resource "aws_security_group" "web" {
  name = "${var.project_name}-web-sg"
  description = "Security group for web server - allows HTTP and SSH"
  vpc_id = var.vpc_id

  ingress {
    description = "Allow HTTP from anywhere"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH from anywhere"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # production mein apna IP dalo: ["X.X.X.X/32"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-web-sg"
    Environment = var.environment
  }
}

# Database Security Group
resource "aws_security_group" "db" {
  name = "${var.project_name}-db-sg"
  description = "Security group for RDS - allow MySQL from web server only"
  vpc_id = var.vpc_id

  ingress {
    description = "MySQL from web server"
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    security_groups = [ aws_security_group.web.id ]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-db-sg"
    Environment = var.environment
  }
}
